# react-admin-project

./: FEATURE_SUMMARY.md  Makefile  PROFILE_SETTINGS_DEMO.md  PROJECT_STATUS.md  RBAC_DEMO.md  README.md  WEEK4_COMPLETION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  index.html  package-lock.json  test_api.py  vite.config.ts
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  env.example  main.py  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 25a34df36c59_initial_migration.py  c8368fa169ad_add_is_system_column_to_permission_table.py
backend/app/: __init__.py
backend/app/api/: __init__.py  auth.py  files.py  permissions.py  roles.py  users.py
backend/app/core/: config.py  database.py  deps.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  permission.py  role.py  user.py
backend/app/services/: __init__.py  auth.py  permission.py  role.py  user.py
backend/app/utils/: __init__.py  formatters.py  helpers.py  validators.py
backend/docs/: CODE_QUALITY.md
backend/docs/testing/: week3-integration-testing-report.md
backend/scripts/: init_db.py  run_tests.py  start.sh
backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_me.py  test_integration.py  test_permissions.py  test_roles.py  test_simple.py  test_users.py
docs/: README.md  WEEK4_SUMMARY.md
docs/demos/: AUTH_DEMO.md  README.md  demo.md
docs/features/: AUTHENTICATION_SUMMARY.md  RBAC_SUMMARY.md  README.md
docs/guides/: FRONTEND_INTEGRATION.md  README.md
docs/implementation-plan/: 00-implementation-summary.md  01-project-overview.md  02-backend-architecture.md  03-database-design.md  04-api-specification.md  05-frontend-integration.md  06-security-implementation.md  07-testing-strategy.md  08-deployment-strategy.md  QUICK_START.md  README.md
docs/summaries/: DOCS_RESTRUCTURE_SUMMARY.md  IMPLEMENTATION_PLAN_SUMMARY.md  PROJECT_RESTRUCTURE_SUMMARY.md  README.md  WEEK3_COMPLETION_SUMMARY.md
docs/testing/: README.md  TESTING_GUIDE.md  test-fixes-final-summary.md  test-fixes-summary.md
frontend/: .gitignore  Dockerfile  README.md  nginx.conf  package.json
frontend/src/: main.tsx
frontend/src/components/: ProtectedRoute.tsx  UserForm.tsx  UserRoleAssignment.tsx
frontend/src/hooks/: useAuthQuery.ts  useRoleQuery.ts  useUserQuery.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: ApiTest.tsx  Dashboard.tsx  PermissionManagement.tsx  Profile.tsx  Register.tsx  Settings.tsx
frontend/src/routes/: api-test.tsx  dashboard.tsx  permissions.tsx  settings.tsx
frontend/src/services/: api.ts  authService.ts  mockData.ts  permissionService.ts  userService.ts
frontend/src/stores/: userStore.ts
frontend/src/types/: api.ts  auth.ts  permission.ts
frontend/src/utils/: index.ts  integrationTest.ts
src/: routeTree.gen.ts
src/components/: ErrorBoundary.tsx  PermissionChecker.tsx  ProtectedRoute.tsx  UserDetail.tsx  UserForm.tsx  UserRoleAssignment.tsx
src/hooks/: useAuthQuery.ts  usePermissionQuery.ts  useUserQuery.ts
src/layouts/: MainLayout.tsx
src/pages/: ApiTest.tsx  Login.tsx  Profile.tsx  UserManagement.tsx
src/routes/: __root.tsx  dashboard.tsx  index.tsx  login.tsx  profile.tsx  register.tsx  users.tsx
src/services/: authService.real.ts  authService.ts  mockData.ts  userService.ts
src/stores/: appStore.ts  authStore.ts  userStore.ts
src/types/: auth.ts  common.ts  user.ts
src/utils/: api.ts  apiTest.ts
